--- a/package.json
+++ b/package.json
@@ -1,19 +1,17 @@
 {
-    "name": "coin-crynova",
+    "name": "coin-crynova-real",
     "version": "1.0.0",
-    "description": "Coin Crynova Mining Game",
+    "description": "Coin Crynova with Real Leaderboard and Invite System",
     "main": "server.js",
     "scripts": {
         "start": "node server.js",
         "dev": "nodemon server.js"
     },
     "dependencies": {
-        "express": "^4.18.2"
+        "express": "^4.18.2",
+        "sqlite3": "^5.1.6"
     },
     "devDependencies": {
         "nodemon": "^3.0.1"
-    },
-    "engines": {
-        "node": ">=14.0.0"
     }
 }
